--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,10 @@
 body {
-  margin:0;
-  padding: 0;
-  font-family: sans-serif;
-  background: url(./img/bg.jpg) no-repeat;
-  background-size: 100%;
-    /* Background image is centered vertically and horizontally at all times */
-    background-position: center center;
-  
-    /* Background image doesn't tile */
-    background-repeat: no-repeat;
-    
-    /* Background image is fixed in the viewport so that it doesn't move when 
-       the content's height is greater than the image's height */
-    background-attachment: fixed;
-    
-    /* This is what makes the background image rescale based
-       on the container's size */
-    background-size: cover;
-    
-    /* Set a background color that will be displayed
-       while the background image is loading */
-    background-color: #464646;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
