--- a/src/components/login/style.scss
+++ b/src/components/login/style.scss
@@ -9,7 +9,10 @@
         font-size: 24px;
         font-family: "Open Sans", sans-serif;
     }
-
+    .headerLogin{
+        font-size: 22px;
+        font-family: "Open Sans", sans-serif;
+    }
     .content {
         display: flex;
         flex-direction: column;
