--- a/src/components/auth/style.scss
+++ b/src/components/auth/style.scss
@@ -47,6 +47,7 @@
                     font-size: 16px;
                     font-family: 'Open Sans', sans-serif;
                     background-color: #f3f3f3;
+                    //background-color: transparent;
                     border:0;
                     border-radius: 4px;
                     margin-bottom: 31px;
