--- a/src/css/App.css
+++ b/src/css/App.css
@@ -1,98 +1,112 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans&display=swap");
- .App {
-	 text-align: center;
-	 display: flex;
-	 justify-content: center;
-	 align-items: center;
-	 font-family: "Open Sans", sans-serif;
+.App {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: "Open Sans", sans-serif;
 }
- .App-logo {
-	 animation: App-logo-spin infinite 20s linear;
-	 height: 40vmin;
-	 pointer-events: none;
+
+.App-logo {
+    animation: App-logo-spin infinite 20s linear;
+    height: 40vmin;
+    pointer-events: none;
 }
- .App-header {
-	 background-color: #282c34;
-	 min-height: 100vh;
-	 display: flex;
-	 flex-direction: column;
-	 align-items: center;
-	 justify-content: center;
-	 font-size: calc(10px + 2vmin);
-	 color: white;
+
+.App-header {
+    background-color: #282c34;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: white;
 }
- .App-link {
-	 color: #61dafb;
+
+.App-link {
+    color: #61dafb;
 }
- @keyframes App-logo-spin {
-	 from {
-		 transform: rotate(0deg);
-	}
-	 to {
-		 transform: rotate(360deg);
-	}
+
+@keyframes App-logo-spin {
+    from {
+        transform: rotate(0deg);
+    }
+    to {
+        transform: rotate(360deg);
+    }
 }
- .login {
-	 width: 27em;
-	 height: 40em;
-	 display: flex;
-	 justify-content: center;
-	 align-items: center;
-	 margin-top: 5px;
-	 position: relative;
-	 z-index: 99;
+
+.login {
+    width: 27em;
+    height: 40em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 5px;
+    position: relative;
+    z-index: 99;
 }
- .login .container {
-	 display: flex;
-	 justify-content: center;
-	 align-items: center;
-	 background-color: #fff;
-	 box-shadow: 0px 0px 12px 2px rgba(15, 15, 15, 0.2);
-	 border-radius: 4px;
-	 position: relative;
-	 z-index: 99;
-	 width: 100%;
-	 height: 100%;
-	 z-index: 99;
-	 padding: 17px 10px;
+
+.login .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #fff;
+    box-shadow: 0px 0px 12px 2px rgba(15, 15, 15, 0.2);
+    border-radius: 4px;
+    position: relative;
+    z-index: 99;
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+    padding: 17px 10px;
 }
- .login .right-side {
-	 display: flex;
-	 flex-direction: column;
-	 justify-content: center;
-	 height: 90%;
-	 background-color: #3498db;
-	 width: 100%;
-	 position: absolute;
-	 right: -34%;
-	 border-radius: 6px;
-	 z-index: 1;
-	 transition: all 400ms ease-in-out;
-	 cursor: pointer;
-	 box-shadow: 0px 0px 12px 2px rgba(15, 15, 15, 0.281);
+
+.login .right-side {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 90%;
+    background-color: #3498db;
+    width: 100%;
+    position: absolute;
+    right: -34%;
+    border-radius: 6px;
+    z-index: 1;
+    transition: all 400ms ease-in-out;
+    cursor: pointer;
+    box-shadow: 0px 0px 12px 2px rgba(15, 15, 15, 0.281);
 }
- .login .right-side.right {
-	 right: -40%;
-	 align-items: flex-end;
+
+.login .right-side.right {
+    right: -40%;
+    align-items: flex-end;
 }
- .login .right-side.right:hover {
-	 right: -45%;
+
+.login .right-side.right:hover {
+    right: -45%;
 }
- .login .right-side.left {
-	 right: 40%;
-	 align-items: flex-start;
+
+.login .right-side.left {
+    right: 40%;
+    align-items: flex-start;
 }
- .login .right-side.left:hover {
-	 right: 45%;
+
+.login .right-side.left:hover {
+    right: 45%;
 }
- .login .right-side .text {
-	 font-size: 21px;
-	 font-weight: 500;
-	 color: #fff;
-	 margin-right: 3em;
-	 margin-left: 3em;
+
+.login .right-side .text {
+    font-size: 21px;
+    font-weight: 500;
+    color: #fff;
+    margin-right: 3em;
+    margin-left: 3em;
 }
- .btn {
+
+.btn {
+    /*
 	 font-size: 21px;
 	 padding: 5px 20px;
 	 border: 0;
@@ -101,11 +115,69 @@
 	 border-radius: 3px;
 	 transition: all 250ms ease-in-out;
 	 cursor: pointer;
+*/
+
+    border-radius: 5px;
+    width: 180px;
+    height: 60px;
+    cursor: pointer;
+   /* background: transparent;*/
+    background-color: #3498db;
+    border: 3px solid #91C9FF;
+    outline: none;
+    transition: 200ms ease-in-out;
 }
- .btn:hover {
-	 background-color: #2386c8;
+
+.btn:hover {
+    background-color: #2e23c8;
+    /*new*/
+    transition: 200ms ease-in-out;
 }
+
+
+/*
  .btn:focus {
 	 outline: none;
 }
- 
+*/
+
+
+/*new button animations*/
+
+svg {
+    position: absolute;
+    left: 0;
+    top: 0;
+    fill: none;
+    stroke: rgb(0, 0, 0);
+    stroke-dasharray: 150 480;
+    stroke-dashoffset: 150;
+    transition: 1s ease-in-out;
+}
+
+.btn:hover svg {
+    stroke-dashoffset: -480;
+}
+
+.btn span {
+    color: white;
+    font-size: 18px;
+    font-weight: 100;
+}
+
+.container {
+    width: 400px;
+    height: 400px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.center {
+    width: 180px;
+    height: 60px;
+    position: absolute;
+  }
