--- a/src/css/App.css
+++ b/src/css/App.css
@@ -9,76 +9,86 @@
     overflow: none;
 }
 header{
-    background: '#2196f3'
+    background: '#2196f3';
+    top:0;
+    position: fixed;
+    width: 100%;
 }
 .login {
-    width: 27em;
+    width: 40em;
     height: 40em;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 5px;
-    position: relative;
-    z-index: 99;
 }
-.login .container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #fff;
-    box-shadow: 0px 0px 12px 2px rgba(15, 15, 15, 0.2);
-    border-radius: 4px;
-    position: relative;
-    z-index: 99;
+.title-container{
     width: 100%;
-    height: 100%;
-    z-index: 99;
-    padding: 17px 10px;
-}
-
-.login .right-side {
+    height: 20%;
+    font-size: 8em;
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     justify-content: center;
-    height: 90%;
-    background-color: #3498db;
-    width: 100%;
-    position: absolute;
-    right: -34%;
-    border-radius: 6px;
-    z-index: 1;
-    transition: all 400ms ease-in-out;
-    cursor: pointer;
-    box-shadow: 0px 0px 12px 2px rgba(15, 15, 15, 0.281);
-}
-
-.login .right-side.right {
-    right: -40%;
     align-items: flex-end;
+    align-content: flex-end;
+    flex-direction: row;
 }
-
-.login .right-side.right:hover {
-    right: -45%;
+.login-title-container{
+    width: 100%;
+    height: 10%;
+    font-size: 2em;
+    font-weight: bold;
+    display: flex;
+    align-content: center;
+    flex-wrap: wrap;
+    justify-content: center;
 }
-
-.login .right-side.left {
-    right: 40%;
-    align-items: flex-start;
+.rest-container{
+    width: 100%;
+    height: 50%;
 }
-
-.login .right-side.left:hover {
-    right: 45%;
+.button-container{
+    width: 100%;
+    height: 20%;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
-
-.login .right-side .text {
-    font-size: 21px;
-    font-weight: 500;
-    color: #fff;
-    margin-right: 3em;
-    margin-left: 3em;
+.button-container button{
+    background-color: white;
+    border-radius: 10px;
+    width: 15em;
+    font-size: 1em;
+    height: 3.5em;
+    display: flex;
 }
-
-
+.button-container button:hover{
+    border-color: rgba(255, 255, 255, 0.45);
+    background-color: rgba(255, 255, 255, 0.45);
+}
+.button-container button .google-icon img{
+    width: 2em;
+    height: 2em;
+}
+.google-icon{
+    height: 100%;
+    display: flex;
+    width: 20%;
+    align-content: center;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.google-title{
+    height: 100%;
+    display: flex;
+    width: 60%;
+    align-content: center;
+    flex-wrap: wrap;
+    font-weight: 600;
+    justify-content: space-around;
+}
+.rest-google-title{
+    height: 100%;
+    display: flex;
+    width: 20%;
+}
 .btnL {
     /*
 	 font-size: 21px;
