--- a/src/css/TransferList.css
+++ b/src/css/TransferList.css
@@ -87,9 +87,6 @@
     flex-wrap: nowrap;
     align-content: center;
     justify-content: left;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
 }
 .transferlist-item-checkbox{
     width: 20%;
@@ -116,4 +113,21 @@
 .transfer-item:hover{
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
     background-color: antiquewhite;
+}
+.question-modal{
+    display: none;
+    position: absolute;
+    margin: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 50%;
+    min-height: 20vh;
+    background-color: whitesmoke;
+    border-radius: 4px;
+    border: outset;
+    flex-direction: column;
+    align-content: left;
+    justify-content:left;
+    align-items: stretch;
 }
