--- a/src/css/TransferList.css
+++ b/src/css/TransferList.css
@@ -84,7 +84,7 @@
     height: 100%;
     font-size: 1vw;
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     align-content: center;
     justify-content: left;
 }
