--- a/src/css/TransferList.css
+++ b/src/css/TransferList.css
@@ -121,7 +121,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 50%;
+    min-width: 50%;
     min-height: 20vh;
     background-color: whitesmoke;
     border-radius: 4px;
@@ -139,7 +139,7 @@
     box-sizing: border-box;
     padding: 1.5vw;
     width: 100%;
-    height: 3vw;
+    min-height: 3vw;
     display: flex;
     align-content: center;
     flex-wrap: nowrap;
