edit mode setup

--- a/src/css/TestMakerDashboard.css
+++ b/src/css/TestMakerDashboard.css
@@ -150,7 +150,7 @@ footer{
 .select-multy{
     width:50%;
 }
-.choose-testname{
+.choose-testattr{
     width: 100%;
     display: none; /*none*/
     align-content: center;
