--- a/src/css/TestMakerDashboard.css
+++ b/src/css/TestMakerDashboard.css
@@ -196,6 +196,21 @@ footer{
     display: block;
     margin: 2.5vh 0 2.5vh 0;
 }
+.delete-button{
+    padding: 1vw 2vw 1vw 2vw;
+    font-weight: bold;
+    color: white;
+    font-size: 0.8vw;
+    background-color: rgb(39, 31, 31);
+    width: 15%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+}
+.delete-button:hover{
+    background-color: rgba(39, 31, 31, 0.788);
+}
 .modul-button:hover, .finish-content-btns:hover, .finish-button:hover, .back-preview-button:hover, .preview-button:hover{
     background-color: #2296f2;
 }
