--- a/src/css/TestMakerDashboard.css
+++ b/src/css/TestMakerDashboard.css
@@ -369,3 +369,20 @@ var{
     display: block;
     margin: 2.5vh 0 2.5vh 0;
 }
+.zh-dates{
+    width: 100%;
+    display: none;
+}
+.zh-dates form{
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    justify-content: center;
+    align-content: space-around;
+    align-items: center;
+    box-sizing: border-box;
+}
+.datetime-picker{
+    padding: 1.5vh;
+}
