--- a/src/css/App.css
+++ b/src/css/App.css
@@ -25,6 +25,11 @@ header{
     height: 40em;
     margin-top: 15%
 }
+.login-trouble{
+    width: 40em;
+    height: 40em;
+    margin-top: 5%
+}
 .title-container{
     width: 100%;
     height: 20%;
@@ -47,8 +52,12 @@ header{
     justify-content: center;
 }
 .rest-container{
-    width: 100%;
     height: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    align-content: flex-start;
+    justify-content: center;
 }
 .button-container{
     width: 100%;
@@ -221,4 +230,15 @@ footer{
     align-content: center;
     justify-content: center;
     overflow: hidden;
+}
+.bad-login-message{
+    background-color: rgba(255, 0, 0, 0.452);
+    box-sizing: border-box;
+    padding: .5em .25em .5em .25em;
+    font-weight: 700;
+    border-radius: 4px;
+}
+#admin-contact{
+    color: #2e23c8;
+    font-weight: bold;
 }
