--- a/src/css/TestMakerDashboard.css
+++ b/src/css/TestMakerDashboard.css
@@ -11,13 +11,6 @@ body{
 footer,header{
     display: nonea;
 }
-footer{
-    height: 10vh;
-    display: block;
-    justify-content: center;
-    bottom: 0;
-    /*background-color: '#2196f3';*/
-}
 #main-welcome{
     height: 100vh;
     bottom: 0;
@@ -145,7 +138,6 @@ footer{
 #select-top{
     width:50%;
     padding-top: 4vh;
-    padding-bottom: 2vh;
 }
 .select-multy{
     width:50%;
@@ -166,7 +158,7 @@ footer{
     background-color: rgba(255, 255, 255, 0.45);
 }
 .test-attributes{
-    display: flex;
+    display: none;
     justify-content: center;
     padding: 30px;
 }
