--- a/src/css/NewsDashboard.css
+++ b/src/css/NewsDashboard.css
@@ -25,3 +25,16 @@
     display: flex;
     font-size: 1.5vw;
 }
+.news-icon-to-modify{
+    width: 10%;
+}
+.news-dialog-icon-modifier{
+    display: flex;
+    width: 100%;
+    height: 100%;
+    flex-wrap: wrap;
+    justify-content: flex-end;
+    align-items: center;
+    align-content: center;
+    flex-direction: column;
+}
