testmaker modul and question adding

--- a/src/css/Modul.css
+++ b/src/css/Modul.css
@@ -26,6 +26,7 @@
     width: 100%;
     box-sizing: border-box;
     padding: 10px 10px 10px 10px;
+    flex-direction: column;
 }
 .modul-footer{
     width: 100%;
