--- a/src/css/Modul.css
+++ b/src/css/Modul.css
@@ -27,6 +27,7 @@
     box-sizing: border-box;
     padding: 10px 10px 10px 10px;
     flex-direction: column;
+    background-color: #a9acb8;
 }
 .modul-footer{
     width: 100%;
@@ -47,6 +48,7 @@
     flex-direction: row;
     justify-content: flex-end;
     align-content: center;
+    position: relative;
 }
 .modul-description{
     display: flex;
@@ -60,6 +62,7 @@
     border-radius: 0%;
     color: #a9acb8;
     background-color: #1c2442;
+    border: 1px solid black;
 }
 .add-modul-btn:hover{
     width:100%;
