--- a/src/css/NewsDashboard.css
+++ b/src/css/NewsDashboard.css
@@ -3,9 +3,9 @@ body{
     margin:0;
 }
 .news-main{
-    padding-top: 5%;
+    padding-top: 2%;
     min-height: 100vh;
-    background-color: #a9acb8;
+    background-color: #3e5dd782;
     position: relative;
     width: 100%;
 }
@@ -23,6 +23,8 @@ body{
     color:white !important;
     background-color: #1c2442;
     box-sizing: border-box;
+    border: 3px solid #ffffff;
+    border-radius: 25px;
     padding: 0.5vw
 }
 .news-dialog-fullwidth{
