--- a/src/css/TestMaker.css
+++ b/src/css/TestMaker.css
@@ -3,7 +3,19 @@
     width: 100%;
     padding:0;
     margin:0;
-    background-color: #a9acb8;
+    background-color: #bec1ca;
+}
+body::-webkit-scrollbar,div::-webkit-scrollbar {
+    width: .5em !important;
+}
+
+body::-webkit-scrollbar-track,div::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3) !important;
+}
+
+body::-webkit-scrollbar-thumb, div::-webkit-scrollbar-thumb {
+    background-color: rgb(61, 58, 58) !important;
+    outline: 1px solid rgb(0, 0, 0) !important;
 }
 .delete-btn{
     width: 15vw;
