--- a/src/css/Modul.css
+++ b/src/css/Modul.css
@@ -27,7 +27,7 @@
     box-sizing: border-box;
     padding: 10px 10px 10px 10px;
     flex-direction: column;
-    background-color: #a9acb8;
+    background-color: rgb(171, 163, 187);
 }
 .modul-footer{
     width: 100%;
@@ -70,6 +70,7 @@
     color: #ffffff;
     background-color: #00abc9;
 }
+
 .image_picker {
     width: 100%;
     display: flex;
