--- a/src/css/NewsDashboard.css
+++ b/src/css/NewsDashboard.css
@@ -5,7 +5,7 @@ body{
 .news-main{
     padding-top: 2%;
     min-height: 100vh;
-    background-color: #3e5dd782;
+    background-color: #bec1ca;
     position: relative;
     width: 100%;
 }
