--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -18,7 +18,8 @@
     background-color: #1c2442 !important;
     color: #a9acb8 !important;
     font-weight: 700 !important;
-    min-height: 10vw;
+    height: 15vw;
+    width: 90%;
 }
 .main-button:hover{
     background-color: #00abc9 !important;
@@ -51,7 +52,8 @@ header{
 }
 @media screen and (min-width: 1025px) {
     .main-button{
-        min-height: 2vw;
+        height: 2vw;
+        width: 100%;
     }
     .home-main{
         background-image: url('../img/mainbackground/mainbgr.jpg');
