--- a/src/css/TestMaker.css
+++ b/src/css/TestMaker.css
@@ -18,9 +18,9 @@ body::-webkit-scrollbar-thumb, div::-webkit-scrollbar-thumb, textarea::-webkit-s
     outline: 1px solid rgb(0, 0, 0) !important;
 }
 .delete-btn{
-    width: 15vw;
+    width: 30vw;
     height: 38px;
-    font-size: 1vw;
+    font-size: 16px;
     text-transform: none;
     color: white;
     border-radius: 4px;
@@ -392,9 +392,9 @@ var{
     width: 20vw;
 }
 .icon-picker-button{
-    width: 15vw;
+    width: 30vw;
     height: 38px;
-    font-size: 1vw;
+    font-size: 15px;
     text-transform: none;
     color: white;
     border-radius: 4px;
@@ -452,4 +452,30 @@ var{
 }
 .wrong-input input{
     color: red;
+}
+@media screen and (min-width: 1025px) {
+    .icon-picker-button{
+        width: 15vw;
+        height: 38px;
+        font-size: 1vw;
+        text-transform: none;
+        color: white;
+        border-radius: 4px;
+        background-color:#1c2442;
+        color: #a9acb8;
+        display: block;
+        margin: 2.5vh 0 2.5vh 0;
+    }
+    .delete-btn{
+        width: 15vw;
+        height: 38px;
+        font-size: 1vw;
+        text-transform: none;
+        color: white;
+        border-radius: 4px;
+        background-color:#a32910;
+        color: #a9acb8;
+        display: block;
+        margin: 2.5vh 0 2.5vh 0;
+    }
 }
